# opensurf

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ipoint.cpp  main.cpp  surflib.h
